--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/papaparse": "^5.5.2",
     "lucide-react": "^0.525.0",
-    "next": "15.4.1",
+    "next": "^15.5.12",
     "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
     "react": "19.1.0",
@@ -35,7 +35,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.1",
+    "eslint-config-next": "^15.5.12",
     "pdfkit": "^0.17.2",
     "tailwindcss": "^4",
     "typescript": "^5",
